--- a/contacts.html
+++ b/contacts.html
@@ -72,13 +72,13 @@
                 <div class="conctact-item">
                     EMAIL
                     <span class="conctact-item-descr">
-                        viktoria2nikiforova@gmail.com
+                        viktoria@gmail.com
                     </span>
                 </div>
                 <div class="conctact-item">
                     PHONE
                     <span class="conctact-item-descr">
-                        +79141002235
+                        +70000000000
                     </span>
                 </div>
                 <div class="conctact-item">
